# blogrs

./: .gitignore  Cargo.toml  README.md  SETUP.md  shell.nix
db/migrations/: 0001_initial.up.sql
migrations/: 0001_initial.up.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/controllers/: author.rs  blog.rs
src/db/: mod.rs
src/handlers/: author.rs  blog.rs
src/models/: author.rs  blog.rs  mod.rs
src/routes/: author.rs  blog.rs  mod.rs
