[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tower-http = { version = "0.6.2", features = ["cors"] }
chrono = { version = "0.4.39", features = ["serde"] }